--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
 }
