--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,5 @@ dependencies {
 
     // Declare the dependency for the Realtime Database library
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
 }
